--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "@stream-io/node-sdk": "^0.5.1",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.21.2",
