--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "stream": "^0.0.3",
     "stream-chat": "^9.25.0",
