--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
+    "socket.io-client": "^4.8.3",
     "stream": "^0.0.3",
     "stream-chat": "^9.25.0",
     "stream-chat-react": "^13.10.0"
